upd: fixed href for about us

--- a/detail_product.html
+++ b/detail_product.html
@@ -105,7 +105,7 @@
                         <a href="./" class="text-gray hover:text-navy transition-all ease-in-out duration-300">Home</a>
                     </li>
                     <li>
-                        <a href="/about.html"
+                        <a href=./about.html"
                             class="text-gray hover:text-navy transition-all ease-in-out duration-300">About</a>
                     </li>
                     <li>
@@ -146,7 +146,7 @@
         <div class="min-h-full flex ">
             <div class="grid xl:grid-cols-5 h-full xl:px-20">
                 <div class="flex items-center justify-center h-full xl:col-span-2">
-                    <img class="rounded-3xl h-5/6" src="./img/Rectangle 4.png" alt="">
+                    <img class="rounded-3xl h-5/6" src="./assets/img/Rectangle 4.png" alt="">
                 </div>
                 <div class="xl:col-span-3 flex flex-col xl:py-16 px-10 space-y-8">
                     <div class="space-y-3 pb-5">
