--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <a href="./" class="text-navy hover:text-navy transition-all ease-in-out duration-300">Home</a>
                     </li>
                     <li>
-                        <a href="/about.html"
+                        <a href=./about.html"
                             class="text-gray hover:text-navy transition-all ease-in-out duration-300">About</a>
                     </li>
                     <li>
