--- a/payment.html
+++ b/payment.html
@@ -106,7 +106,7 @@
                         <a href="./" class="text-gray hover:text-navy transition-all ease-in-out duration-300">Home</a>
                     </li>
                     <li>
-                        <a href="/about.html"
+                        <a href=./about.html"
                             class="text-gray hover:text-navy transition-all ease-in-out duration-300">About</a>
                     </li>
                     <li>
