--- a/product.html
+++ b/product.html
@@ -97,7 +97,7 @@
                         <a href="./" class="text-gray hover:text-navy transition-all ease-in-out duration-300">Home</a>
                     </li>
                     <li>
-                        <a href="/about.html" class="text-gray hover:text-navy transition-all ease-in-out duration-300">About</a>
+                        <a href=./about.html" class="text-gray hover:text-navy transition-all ease-in-out duration-300">About</a>
                     </li>
                     <li>
                         <a href="./product.html" class="text-navy hover:text-navy transition-all ease-in-out duration-300">Product</a>
