Upd : Fix navbar and fix profile icon

--- a/detail_product.html
+++ b/detail_product.html
@@ -69,7 +69,7 @@
                             </span>
                         </a>
                         <a href="./profile_settings.html" id="profileBtn" class="hidden">
-                            <img class="overflow-clip w-9 h-9 object-cover rounded-full" src="./img/products_2.png"
+                            <img class="overflow-clip w-9 h-9 object-cover rounded-full" src="./assets/img/products_2.png"
                                 alt="">
                         </a>
                     </div>
@@ -137,7 +137,7 @@
                         </svg>
                     </a>
                     <a id="profileBtnMbl" class="hidden">
-                        <img class="overflow-clip w-9 h-9 object-cover rounded-full" src="./img/products_2.png" alt="">
+                        <img class="overflow-clip w-9 h-9 object-cover rounded-full" src="./assets/img/products_2.png" alt="">
                     </a>
                 </div>
 
