--- a/product.html
+++ b/product.html
@@ -48,7 +48,7 @@
                         <li><a class="text-gray hover:text-navy transition-all ease-in-out duration-300" href="./">Home</a></li>
                         <li><a class="text-gray hover:text-navy transition-all ease-in-out duration-300" href="./about.html">About</a></li>
                         <li><a class="text-navy hover:text-navy transition-all ease-in-out duration-300" href="./product.html">Product</a></li>
-                        <li><a class="text-gray hover:text-navy transition-all ease-in-out duration-300" href="./payment.html">Payment</a></li>
+                        <li><a class="text-gray hover:text-navy transition-all ease-in-out duration-300" href="./maintenance.html">FAQ</a></li>
                         <li><span class="font-medium cursor default">|</span></li>
                     </ul>
                     
@@ -97,13 +97,13 @@
                         <a href="./" class="text-gray hover:text-navy transition-all ease-in-out duration-300">Home</a>
                     </li>
                     <li>
-                        <a href=./about.html" class="text-gray hover:text-navy transition-all ease-in-out duration-300">About</a>
+                        <a href="./about.html" class="text-gray hover:text-navy transition-all ease-in-out duration-300">About</a>
                     </li>
                     <li>
                         <a href="./product.html" class="text-navy hover:text-navy transition-all ease-in-out duration-300">Product</a>
                     </li>
                     <li>
-                        <a href="./payment.html" class="text-gray hover:text-navy transition-all ease-in-out duration-300">Payment</a>
+                        <a href="./maintenance.html" class="text-gray hover:text-navy transition-all ease-in-out duration-300">FAQ</a>
                     </li>
                 </ul>
                 <div class="space-y-3 xl:space-y-0 xl:space-x-3 flex flex-col">
